# book_creator

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: main.py
docs/: accessibility-checklist.md  chatgpt5-gemini25-integration.md  development-setup.md  documentation-index.md  frontend-architecture.md  frontend-provider-settings.md  phase-0-foundations.md  phase-1-environment-tooling.md  phase-10-research-parsing.md  phase-11-emotional-layer.md  phase-12-creative-director.md  phase-13-writing-pipeline.md  phase-14-quality-assurance.md  phase-15-observability.md  phase-16-performance-cost.md  phase-17-security-compliance.md  phase-18-polish-documentation.md  phase-19-prelaunch-validation.md  phase-2-domain-modeling.md  phase-20-launch-iteration.md  phase-3-provider-abstraction.md  phase-4-workflow-orchestrator.md  phase-5-structure-generation.md  phase-6-frontend-scaffolding.md  phase-7-structure-ux.md  (+6 more)
libs/python/: pyproject.toml
libs/python/book_creator_observability/: __init__.py  logging.py  metrics.py
libs/python/book_creator_providers/: __init__.py  base.py  config.py  exceptions.py  factory.py  gemini.py  mock.py  openai.py  pricing.py
libs/python/book_creator_schemas/: __init__.py  enums.py
libs/python/book_creator_schemas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/python/book_creator_schemas/models/: book.py  messages.py
libs/python/book_creator_schemas/utils/: validators.py
(+123 files in other folders)
