[project]
name = "book-creator-api"
version = "0.1.0"
description = "API gateway for the local-first non-fiction book creator"
authors = [{ name = "Book Creator Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]~=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.5",
    "black~=24.4",
    "pytest~=8.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
